Fix overflow text, add pseudo-elements, add todo focus and edit todo adaptability

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,137 +1,126 @@
-body {
-    background-color: #F2F2F2;
-    color: #666666;
-    font-family: 'Roboto', sans-serif;
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
-
-    min-height: 100vh;
-    align-items: center;
-
-    display: flex;
-    justify-content: center;
+    box-sizing: border-box;
 }
 
-.main-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+body {
+    font-family: 'Roboto', sans-serif;
+    color: #666666;
 }
 
-.header {
+.todo-app {
+    margin: 20px auto 0;
+    max-width: 562px;
+    min-width: 400px;
+    width: 90%;
+    position: relative;
+}
+
+.todo-app__header > h1 {
+    text-align: center;
     font-size: 100px;
     font-weight: 100;
-    height: 110px;
     color: #CCCCCC;
-    display: inline-block;
 }
 
-.content {
+.todo-app__frame {
+    position: relative;
     background-color: #FFFFFF;
-    width: 562px;
-    min-height: 402px;
     box-shadow: 0px 2px 4px 0px #00000030;
-    display: flex;
-    flex-direction: column;
 }
 
-.content__header {
+.todo-app__frame:before {
+    content: "";
+    height: 4px;
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    left: 2px;
+    right: 2px;
+    box-shadow: 0px 2px 4px 0px #00000033;
+}
+
+.todo-app__frame:after {
+    content: "";
+    height: 4px;
+    display: block;
+    position: absolute;
+    bottom: -10px;
+    left: 4px;
+    right: 4px;
+    box-shadow: 0px 2px 4px 0px #00000033;
+}
+
+.todo-app__main-controls {
     display: flex;
     height: 66px;
     border-bottom: 1px solid #E6E6E6;
 }
 
-#content-header__check {
+.main-controls__select-all > button {
     background-image: url("./../../images/icons/select-all@2x.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 20px;
+    background-size: 25px;
     background-color: #fff;
-
-    align-self: center;
-    width: 54px;
-    height: 40px;
-    margin: 10px;
     border: 0px #000 solid;
+    height: 100%;
+    min-width: 60px;
 }
 
-#content-header__new-todo {
+.main-controls__new-todo {
+    flex: auto;
+}
+
+.main-controls__new-todo > input {
     font-family: Roboto, sans-serif;
     font-style: italic;
     font-weight: 300;
     font-size: 24px;
-
-    flex-grow: 1;
     border: none;
     color: #666666;
-
     line-height: 21px;
-    text-align: left;
+    width: 100%;
+    height: 100%;
 }
 
-#content-header__new-todo::placeholder {
-    color: #CCCCCC;
+.todo-app__tasks {
+    min-height: 350px;
 }
 
-.todos {
-    margin: 0;
-    padding: 0;
+.todo-app__task-list {
+    list-style: none;
 }
 
-.todo {
+.todo-app__task-item {
     color: #000000;
     font-size: 24px;
-    display: flex;
     height: 64px;
     border-bottom: 1px solid #E6E6E6;
+    display: flex;
+    align-items: center;
 }
 
-.todo:hover {
+.todo-app__task-item:hover {
     background: #FAFAFA;
 }
 
-.todo__text {
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 21px;
-    text-align: left;
-    color: #666666;
-
-    flex-grow: 1;
-    justify-self: start;
-    align-self: center;
-}
-
-.todo__btn--delete {
-    border: 0px #000 solid;
-    background-color: #fff;
-}
-
-.todo:hover > .todo__btn--delete {
-    background-image: url("../../images/icons/close@2x.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 20px;
-    background-color: #FAFAFA;
-
-    width: 40px;
-    height: 40px;
-    margin: 11px;
-    align-self: center;
-    border: 0px #000 solid;
-}
-
-.todo__btn--check {
+.task-item__status {
+    display: block;
+    appearance: none;
     margin: 9px;
     align-self: center;
-    width: 40px;
+    min-width: 40px;
     height: 40px;
     border: 1px solid #E6E6E6;
     border-radius: 50%;
     background-color: #FFFFFF;
 }
 
-.todo__btn--check:checked {
+.task-item__status:checked {
     background-image: url("../../images/icons/completed@2x.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -140,15 +129,53 @@ body {
     border: 1px solid #5DC2AF;
 }
 
-.todo__btn--check:focus {
+.task-item__status:focus {
     border: 1px solid #CCCCCC;
 }
 
-.todo__btn--check {
-    appearance: none;
+.task-item__text {
+    flex: auto;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 21px;
+    text-align: left;
+    color: #666666;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    align-self: center;
 }
 
-.footer {
+.task-item__delete {
+    border: 0px #000 solid;
+    background-color: #fff;
+}
+
+.todo-app__task-item:hover > .task-item__delete,
+.todo-app__task-item > .task-item__delete:hover,
+.todo-app__task-item > .task-item__delete:focus {
+    background-image: url("../../images/icons/close@2x.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px;
+    border: 0px #000 solid;
+    background-color: #FAFAFA;
+    min-width: 40px;
+    height: 40px;
+    align-self: center;
+    margin: 11px;
+}
+
+.todo-app__task-item > .task-item__delete:hover,
+.todo-app__task-item > .task-item__delete:focus {
+    border: 1px #000 solid;
+}
+
+.todo-app__task-item > .task-item__delete:focus {
+    background-color: #fff;
+}
+
+.todo-app__actions-bar {
     height: 40px;
     color: #888888;
     font-size: 14px;
@@ -160,25 +187,25 @@ body {
     justify-content: space-between;
 }
 
-.f-s-label__text {
+.switcher__label > span {
     padding: 2px 5px;
     border-radius: 5%;
     border: 1px solid #ffffff;
 }
 
-.footer-switcher__check:checked + .f-s-label__text {
-    border: 1px solid #EBDFDF;
-}
-
-.footer-switcher__check:focus + .f-s-label__text {
-    border: 1px solid #000000;
-}
-
-.footer-switcher__check {
+.switcher__label > input {
     appearance: none;
 }
 
-.footer__btn--clear {
+input[type="radio"]:checked + span {
+    border: 1px solid #EBDFDF;
+}
+
+input[type="radio"]:focus + span {
+    border: 1px solid #EBDFDF;
+}
+
+.actions-bar__clear-completed > button {
     font-family: Roboto, sans-serif;
     font-size: 14px;
     font-weight: 300;
@@ -187,18 +214,4 @@ body {
     background-color: #fff;
     text-align: left;
     line-height: 21px;
-}
-
-#first-footer, #second-footer {
-    background-color: #FFFFFF;
-    width: 99%;
-    height: 4px;
-    z-index: -1;
-    box-shadow: 0px 2px 4px 0px #00000033;
-
-}
-
-#second-footer {
-    width: 98%;
-    z-index: -2;
 }
